Fix Description Overflow

--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,5 @@ nav a {
     color: #fff;
     padding: 20px;
     border-radius: 8px;
-    
-}
-p1 {
-    width: 90%;
+    max-width: 90%;
 }
